@@ -10,6 +10,7 @@ Features added
   - ``app.add_directive``
   - ``app.add_role``
   - ``app.add_generic_role``
+  - ``app.add_source_parser``
   - ``image.data_uri``
   - ``image.nonlocal_uri``
 
